--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,14 @@
-MONGODB_URI =
+MONGODB_URI = mongodb+srv://nitinkumardhundhara:DARKXSIDE78@cluster0.wdive.mongodb.net/?retryWrites=true&w=majority
 # create one using openssl rand -base64 32
 JWT_TOKEN = 
 # gemini api key
-NEXT_PUBLIC_GEMINI_API_KEY = 
+NEXT_PUBLIC_GEMINI_API_KEY =  AIzaSyAHsGZ0Mk9aJNktN3VXd6l3smN-Spn1-KQ
 # self host anime api url from  https://github.com/consumet/api.consumet.org
-NEXT_PUBLIC_ANIME_API_URL = 
-NEXT_PUBLIC_STREAM_API = 
+NEXT_PUBLIC_ANIME_API_URL = https://carnoixorapi.vercel.app/
+NEXT_PUBLIC_STREAM_API = https://api.amvstr.me/api/v2/stream/skiptimes/
 NEXT_PUBLIC_EMAIL_SERVICE = gmail
 # email address
-NEXT_PUBLIC_EMAIL = 
+NEXT_PUBLIC_EMAIL = nk1010057@gmail.com
 # since this project utilises nodemailer use app password found inside google account
 NEXT_PUBLIC_EMAIL_PASSWORD = 
 # use website public domain in production or localhost in dev
