--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,9 @@ MONGODB_URI = mongodb+srv://nitinkumardhundhara:DARKXSIDE78@cluster0.wdive.mongo
 # create one using openssl rand -base64 32
 JWT_TOKEN = 
 # gemini api key
-NEXT_PUBLIC_GEMINI_API_KEY =  AIzaSyAHsGZ0Mk9aJNktN3VXd6l3smN-Spn1-KQ
+NEXT_PUBLIC_GEMINI_API_KEY =  AIzaSyABMgbsJWoPOah3ZyVj8n18tB3zcXS7Dhc
 # self host anime api url from  https://github.com/consumet/api.consumet.org
-NEXT_PUBLIC_ANIME_API_URL = https://carnoixorapi.vercel.app/
+NEXT_PUBLIC_ANIME_API_URL = https://api-consumet-org-psi-pearl.vercel.app/
 NEXT_PUBLIC_STREAM_API = https://api.amvstr.me/api/v2/stream/skiptimes/
 NEXT_PUBLIC_EMAIL_SERVICE = gmail
 # email address
