--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ JWT_TOKEN =
 NEXT_PUBLIC_GEMINI_API_KEY =  AIzaSyABMgbsJWoPOah3ZyVj8n18tB3zcXS7Dhc
 # self host anime api url from  https://github.com/consumet/api.consumet.org
 NEXT_PUBLIC_ANIME_API_URL = https://api-consumet-org-psi-pearl.vercel.app
-NEXT_PUBLIC_STREAM_API = https://aniwatch-api-wine.vercel.app/api/v2/hianime/episode/sources
+NEXT_PUBLIC_STREAM_API = https://api-consumet-org-psi-pearl.vercel.app/anime/zoro/watch/
 NEXT_PUBLIC_EMAIL_SERVICE = gmail
 # email address
 NEXT_PUBLIC_EMAIL = nk1010057@gmail.com
